[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "django>=4.2.4",
    "django-environ>=0.10.0",
    "psycopg2-binary>=2.9.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD3"}

[tool.pdm.scripts]
_.env_file = ".env"
req = "pdm export -o requirements.txt --without-hashes --prod"
